// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render styles for size lg 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 28px;
  font-weight: 500;
  line-height: calc(34 / 28);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 37px;
    line-height: calc(40/37);
  }
}

<HeadingTag
  className="c0"
  size="lg"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#FF1C4A",
          "600": "#cc163b",
          "700": "#99102c",
          "75": "#ffdce3",
          "800": "#660b1d",
          "900": "#33050e",
          "925": "#26040b",
          "950": "#190207",
          "975": "#0c0103",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488BD9",
          "600": "#396fad",
          "700": "#2b5382",
          "75": "#e3edf9",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "925": "#0a1420",
          "950": "#070d15",
          "975": "#03060a",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "150": "#b2ece4",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00C0A5",
          "600": "#009984",
          "700": "#007363",
          "75": "#d8f5f1",
          "800": "#004c42",
          "850": "#003931",
          "900": "#002621",
          "925": "#001c18",
          "950": "#001310",
          "975": "#000908",
        },
        "secondary": Object {
          "100": "#cfdddb",
          "150": "#b7ccc9",
          "200": "#9fbbb7",
          "25": "#f3f6f6",
          "300": "#709993",
          "400": "#40776f",
          "50": "#e7eeed",
          "500": "#11564C",
          "600": "#0d443c",
          "700": "#0a332d",
          "75": "#dbe5e4",
          "800": "#06221e",
          "900": "#03110f",
          "925": "#020c0b",
          "950": "#010807",
          "975": "#000403",
        },
        "shade": Object {
          "0": "#fff",
          "100": "#e3e3e3",
          "1000": "#000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "75": "#eaeaea",
          "800": "#2f2f2f",
          "900": "#171717",
          "925": "#111",
          "950": "#0b0b0b",
          "975": "#050505",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4EC000",
          "600": "#3e9900",
          "700": "#2e7300",
          "75": "#e4f5d8",
          "800": "#1f4c00",
          "900": "#0f2600",
          "925": "#0b1c00",
          "950": "#071300",
          "975": "#030900",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#FF7063",
          "600": "#cc594f",
          "700": "#99433b",
          "75": "#ffe9e7",
          "800": "#662c27",
          "900": "#331613",
          "925": "#26100e",
          "950": "#190b09",
          "975": "#0c0504",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#F5A623",
          "600": "#c4841c",
          "700": "#936315",
          "75": "#fdf1de",
          "800": "#62420e",
          "900": "#312107",
          "925": "#241805",
          "950": "#181003",
          "975": "#0c0801",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size md 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 22px;
  font-weight: 500;
  line-height: calc(28 / 22);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 28px;
    line-height: calc(32/28);
  }
}

<HeadingTag
  className="c0"
  size="md"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#FF1C4A",
          "600": "#cc163b",
          "700": "#99102c",
          "75": "#ffdce3",
          "800": "#660b1d",
          "900": "#33050e",
          "925": "#26040b",
          "950": "#190207",
          "975": "#0c0103",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488BD9",
          "600": "#396fad",
          "700": "#2b5382",
          "75": "#e3edf9",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "925": "#0a1420",
          "950": "#070d15",
          "975": "#03060a",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "150": "#b2ece4",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00C0A5",
          "600": "#009984",
          "700": "#007363",
          "75": "#d8f5f1",
          "800": "#004c42",
          "850": "#003931",
          "900": "#002621",
          "925": "#001c18",
          "950": "#001310",
          "975": "#000908",
        },
        "secondary": Object {
          "100": "#cfdddb",
          "150": "#b7ccc9",
          "200": "#9fbbb7",
          "25": "#f3f6f6",
          "300": "#709993",
          "400": "#40776f",
          "50": "#e7eeed",
          "500": "#11564C",
          "600": "#0d443c",
          "700": "#0a332d",
          "75": "#dbe5e4",
          "800": "#06221e",
          "900": "#03110f",
          "925": "#020c0b",
          "950": "#010807",
          "975": "#000403",
        },
        "shade": Object {
          "0": "#fff",
          "100": "#e3e3e3",
          "1000": "#000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "75": "#eaeaea",
          "800": "#2f2f2f",
          "900": "#171717",
          "925": "#111",
          "950": "#0b0b0b",
          "975": "#050505",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4EC000",
          "600": "#3e9900",
          "700": "#2e7300",
          "75": "#e4f5d8",
          "800": "#1f4c00",
          "900": "#0f2600",
          "925": "#0b1c00",
          "950": "#071300",
          "975": "#030900",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#FF7063",
          "600": "#cc594f",
          "700": "#99433b",
          "75": "#ffe9e7",
          "800": "#662c27",
          "900": "#331613",
          "925": "#26100e",
          "950": "#190b09",
          "975": "#0c0504",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#F5A623",
          "600": "#c4841c",
          "700": "#936315",
          "75": "#fdf1de",
          "800": "#62420e",
          "900": "#312107",
          "925": "#241805",
          "950": "#181003",
          "975": "#0c0801",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size sm 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 18px;
  font-weight: 500;
  line-height: calc(24 / 18);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 22px;
    line-height: calc(28/22);
  }
}

<HeadingTag
  className="c0"
  size="sm"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#FF1C4A",
          "600": "#cc163b",
          "700": "#99102c",
          "75": "#ffdce3",
          "800": "#660b1d",
          "900": "#33050e",
          "925": "#26040b",
          "950": "#190207",
          "975": "#0c0103",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488BD9",
          "600": "#396fad",
          "700": "#2b5382",
          "75": "#e3edf9",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "925": "#0a1420",
          "950": "#070d15",
          "975": "#03060a",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "150": "#b2ece4",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00C0A5",
          "600": "#009984",
          "700": "#007363",
          "75": "#d8f5f1",
          "800": "#004c42",
          "850": "#003931",
          "900": "#002621",
          "925": "#001c18",
          "950": "#001310",
          "975": "#000908",
        },
        "secondary": Object {
          "100": "#cfdddb",
          "150": "#b7ccc9",
          "200": "#9fbbb7",
          "25": "#f3f6f6",
          "300": "#709993",
          "400": "#40776f",
          "50": "#e7eeed",
          "500": "#11564C",
          "600": "#0d443c",
          "700": "#0a332d",
          "75": "#dbe5e4",
          "800": "#06221e",
          "900": "#03110f",
          "925": "#020c0b",
          "950": "#010807",
          "975": "#000403",
        },
        "shade": Object {
          "0": "#fff",
          "100": "#e3e3e3",
          "1000": "#000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "75": "#eaeaea",
          "800": "#2f2f2f",
          "900": "#171717",
          "925": "#111",
          "950": "#0b0b0b",
          "975": "#050505",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4EC000",
          "600": "#3e9900",
          "700": "#2e7300",
          "75": "#e4f5d8",
          "800": "#1f4c00",
          "900": "#0f2600",
          "925": "#0b1c00",
          "950": "#071300",
          "975": "#030900",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#FF7063",
          "600": "#cc594f",
          "700": "#99433b",
          "75": "#ffe9e7",
          "800": "#662c27",
          "900": "#331613",
          "925": "#26100e",
          "950": "#190b09",
          "975": "#0c0504",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#F5A623",
          "600": "#c4841c",
          "700": "#936315",
          "75": "#fdf1de",
          "800": "#62420e",
          "900": "#312107",
          "925": "#241805",
          "950": "#181003",
          "975": "#0c0801",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size xl 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 37px;
  font-weight: bold;
  line-height: calc(40 / 37);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 46px;
    line-height: calc(50/46);
  }
}

<HeadingTag
  className="c0"
  size="xl"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#FF1C4A",
          "600": "#cc163b",
          "700": "#99102c",
          "75": "#ffdce3",
          "800": "#660b1d",
          "900": "#33050e",
          "925": "#26040b",
          "950": "#190207",
          "975": "#0c0103",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488BD9",
          "600": "#396fad",
          "700": "#2b5382",
          "75": "#e3edf9",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "925": "#0a1420",
          "950": "#070d15",
          "975": "#03060a",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "150": "#b2ece4",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00C0A5",
          "600": "#009984",
          "700": "#007363",
          "75": "#d8f5f1",
          "800": "#004c42",
          "850": "#003931",
          "900": "#002621",
          "925": "#001c18",
          "950": "#001310",
          "975": "#000908",
        },
        "secondary": Object {
          "100": "#cfdddb",
          "150": "#b7ccc9",
          "200": "#9fbbb7",
          "25": "#f3f6f6",
          "300": "#709993",
          "400": "#40776f",
          "50": "#e7eeed",
          "500": "#11564C",
          "600": "#0d443c",
          "700": "#0a332d",
          "75": "#dbe5e4",
          "800": "#06221e",
          "900": "#03110f",
          "925": "#020c0b",
          "950": "#010807",
          "975": "#000403",
        },
        "shade": Object {
          "0": "#fff",
          "100": "#e3e3e3",
          "1000": "#000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "75": "#eaeaea",
          "800": "#2f2f2f",
          "900": "#171717",
          "925": "#111",
          "950": "#0b0b0b",
          "975": "#050505",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4EC000",
          "600": "#3e9900",
          "700": "#2e7300",
          "75": "#e4f5d8",
          "800": "#1f4c00",
          "900": "#0f2600",
          "925": "#0b1c00",
          "950": "#071300",
          "975": "#030900",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#FF7063",
          "600": "#cc594f",
          "700": "#99433b",
          "75": "#ffe9e7",
          "800": "#662c27",
          "900": "#331613",
          "925": "#26100e",
          "950": "#190b09",
          "975": "#0c0504",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#F5A623",
          "600": "#c4841c",
          "700": "#936315",
          "75": "#fdf1de",
          "800": "#62420e",
          "900": "#312107",
          "925": "#241805",
          "950": "#181003",
          "975": "#0c0801",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;

exports[`Heading should render styles for size xs 1`] = `
.c0 {
  margin-top: 0;
  margin-bottom: 0;
  color: #474747;
  font-size: 15px;
  font-weight: 500;
  line-height: calc(20 / 15);
  font-family: 'Cabin',sans-serif;
}

@media (min-width:36.0625em) {
  .c0 {
    font-size: 18px;
    line-height: calc(24/18);
  }
}

<HeadingTag
  className="c0"
  size="xs"
  theme={
    Object {
      "colors": Object {
        "error": Object {
          "100": "#ffd1da",
          "200": "#ffa4b6",
          "25": "#fff3f5",
          "300": "#ff7692",
          "400": "#ff496e",
          "50": "#ffe8ec",
          "500": "#FF1C4A",
          "600": "#cc163b",
          "700": "#99102c",
          "75": "#ffdce3",
          "800": "#660b1d",
          "900": "#33050e",
          "925": "#26040b",
          "950": "#190207",
          "975": "#0c0103",
        },
        "info": Object {
          "100": "#dae7f7",
          "200": "#b5d0ef",
          "25": "#f5f9fd",
          "300": "#91b9e8",
          "400": "#6ca2e0",
          "50": "#ecf3fb",
          "500": "#488BD9",
          "600": "#396fad",
          "700": "#2b5382",
          "75": "#e3edf9",
          "800": "#1c3756",
          "900": "#0e1b2b",
          "925": "#0a1420",
          "950": "#070d15",
          "975": "#03060a",
        },
        "primary": Object {
          "100": "#ccf2ed",
          "150": "#b2ece4",
          "200": "#99e5db",
          "25": "#f2fbfa",
          "300": "#66d9c9",
          "400": "#32ccb7",
          "50": "#e5f8f6",
          "500": "#00C0A5",
          "600": "#009984",
          "700": "#007363",
          "75": "#d8f5f1",
          "800": "#004c42",
          "850": "#003931",
          "900": "#002621",
          "925": "#001c18",
          "950": "#001310",
          "975": "#000908",
        },
        "secondary": Object {
          "100": "#cfdddb",
          "150": "#b7ccc9",
          "200": "#9fbbb7",
          "25": "#f3f6f6",
          "300": "#709993",
          "400": "#40776f",
          "50": "#e7eeed",
          "500": "#11564C",
          "600": "#0d443c",
          "700": "#0a332d",
          "75": "#dbe5e4",
          "800": "#06221e",
          "900": "#03110f",
          "925": "#020c0b",
          "950": "#010807",
          "975": "#000403",
        },
        "shade": Object {
          "0": "#fff",
          "100": "#e3e3e3",
          "1000": "#000",
          "200": "#c8c8c8",
          "25": "#f8f8f8",
          "300": "#adadad",
          "400": "#929292",
          "50": "#f1f1f1",
          "500": "#777777",
          "600": "#5f5f5f",
          "700": "#474747",
          "75": "#eaeaea",
          "800": "#2f2f2f",
          "900": "#171717",
          "925": "#111",
          "950": "#0b0b0b",
          "975": "#050505",
        },
        "success": Object {
          "100": "#dbf2cc",
          "200": "#b8e599",
          "25": "#f6fbf2",
          "300": "#94d966",
          "400": "#71cc32",
          "50": "#edf8e5",
          "500": "#4EC000",
          "600": "#3e9900",
          "700": "#2e7300",
          "75": "#e4f5d8",
          "800": "#1f4c00",
          "900": "#0f2600",
          "925": "#0b1c00",
          "950": "#071300",
          "975": "#030900",
        },
        "tertiary": Object {
          "100": "#ffe2df",
          "200": "#ffc5c0",
          "25": "#fff7f7",
          "300": "#ffa9a1",
          "400": "#ff8c82",
          "50": "#fff0ef",
          "500": "#FF7063",
          "600": "#cc594f",
          "700": "#99433b",
          "75": "#ffe9e7",
          "800": "#662c27",
          "900": "#331613",
          "925": "#26100e",
          "950": "#190b09",
          "975": "#0c0504",
        },
        "warn": Object {
          "100": "#fdedd3",
          "200": "#fbdba7",
          "25": "#fefaf4",
          "300": "#f9c97b",
          "400": "#f7b74e",
          "50": "#fef6e9",
          "500": "#F5A623",
          "600": "#c4841c",
          "700": "#936315",
          "75": "#fdf1de",
          "800": "#62420e",
          "900": "#312107",
          "925": "#241805",
          "950": "#181003",
          "975": "#0c0801",
        },
      },
      "typography": Object {
        "body": Object {
          "fontFamily": "'Open Sans', sans-serif",
        },
        "heading": Object {
          "fontFamily": "'Cabin', sans-serif",
        },
      },
    }
  }
/>
`;
